--- a/côted'ivoire.html
+++ b/côted'ivoire.html
@@ -32,7 +32,7 @@
                 </h2> 
                    <p> La basilique Notre-Dame-de-la-Paix de Yamoussoukro est <br>
                     une des plus grandes églises catholiques du monde.<br>             
-                    Située à Yamoussoukro,la capitale ivoirienne <br>
+                    Située dans la capitale ivoirienne <br>
                      </p>
                        
                 </div>
